<resources>
    <string name="app_name">잼</string>
    <string name="app_scheme">jam</string>
    <string name="app_host">data</string>
    <string name="app_host_parameter">room</string>
    <string name="kakao_scheme">kakaof75959ac36775e2c16a0291c5270bad5</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="app_desc">구글스토어 익명 채팅놀이터 - 잼</string>
    <string name="google_map_key">AIzaSyBlJz4o2pTgP2cvw5_nsW0lip3-hyU6Va8</string>
    <string name="kakao_app_key">f75959ac36775e2c16a0291c5270bad5</string>
    <string name="facebook_app_id">1897697773876301</string>
    <string name="fb_login_protocol_scheme">fb1897697773876301</string>
    <string name="join_title">회원가입</string>
    <string name="login_title">로그인</string>
    <string name="kakao_link_btn01">참여하기</string>
    <string name="menu_list">잼 목록</string>
    <string name="menu_me">내 잼</string>
    <string name="menu_create">잼 만들기</string>
    <string name="menu_setting">설정</string>
    <string name="menu_search">#태그 검색</string>
    <string-array name="catelist">
        <item>홍보잼</item>
        <item>친목</item>
        <item>자유</item>
        <item>역할극</item>
        <item>남돌</item>
        <item>여돌</item>
        <item>게임</item>
        <item>애니</item>
        <item>솔로</item>
        
        <item>사회</item>
        <item>공지</item> 
    </string-array>
    <string-array name="catelist2">
        
        
        

        <item>친목</item>
        <item>자유</item>
        <item>역할극</item>
        <item>남돌</item>
        <item>여돌</item>
        <item>게임</item>
        <item>애니</item>
        <item>솔로</item>
        
        <item>사회</item>
    </string-array>
    <string-array name="chat_room_option">
        <item>카카오톡 공유</item>
        <item>내 정보 수정</item>
        <item>참여 맴버 보기</item>
        <item>잼 나가기</item>
        <item>잼 신고</item>
    </string-array>
    <string-array name="chat_room_option_admin">
        <item>카카오톡 공유</item>
        <item>내 정보 수정</item>
        <item>참여 맴버 보기</item>
        <item>잼 나가기</item>
        <item>잼 폐쇄하기</item>
        <item>잼 홍보</item>
        <item>잼 수정</item>
    </string-array>
    <string name="btn_pchatdelete">지우기</string>
    <string name="ok_pchatdel">확인</string>
    <string name="info_pchatdel">전부 지우기</string>
    <string name="text_pchatdelareement">비밀쪽지가 전부 지워집니다.</string>
    <string-array name="chat_room_add_file">
        <item>15초 음성 메시지</item>
        <item>이미지 메시지</item>
    </string-array>
    <string-array name="chat_room_send_msg_type">
        <item>프로필보기</item>
        <item>비밀쪽지</item>
        <item>하트 보내기</item>
        <item>폭탄 보내기</item>
    </string-array>
    <string-array name="chat_room_send_msg_normaltype">  
        <item>프로필 보기</item>
        <item>비밀쪽지</item>
    </string-array>
    <string name="feed_all">전체공개</string>
    <string name="feed_fam_only">맴버공개</string>
    <string name="feed_write">잼 만들기</string>
    <string name="feed_notice">공지 게시</string>
    <string name="feed_modify">잼 수정</string>
    <string name="feed_title_hint">주제를 써주세요.</string>
    <string name="feed_text_hint">내용을 써주세요.</string>
    <string name="private_msg_title">비밀쪽지</string>
    <string name="private_msg_hint">실시간 비밀쪽지를 보냅니다.</string>
    <string name="private_list_title">마지막에 받은 비밀쪽지</string>
    <string name="feed_readying">승인 대기중</string>
    <string name="feed_join">들어가기</string>
    <string name="feed_join_count">명 참가 중입니다.</string>
    <string name="title_size_err">제목을 한글자 이상 써주세요.</string>
    <string name="text_size_err">소개를 한글자 이상 써주세요.</string>
    <string name="name_setting">닉네임 설정</string>
    <string name="name_size_err">한글자 이상 쓰시오.</string>
    <string name="join_ready">승인 대기중 입니다.</string>
    <string name="join_ban">강퇴 처리된 방입니다.</string>
    <string name="join_name">닉네임</string>
    <string name="join_desc">자기소개</string>
    <string name="title_join_member">참여 맴버 보기</string>
    <string name="btn_join_create">저장</string>
    <string name="noti_ban" formatted="false">%s님이 강퇴 되었습니다</string>
    <string name="noti_in" formatted="false">%s님이 입장 하였습니다.</string>
    <string name="noti_out" formatted="false">%s님이 잼을 나가셨습니다.</string>
    <string name="jam_out_title">잼 나가기</string>
    <string name="jam_out_desc">이 잼에서 나가시겠습니까?</string>
    <string name="jam_out_removeaudio">업로드된 메시지는 잼을 나가면 자동 삭제 됩니다.</string>
    <string name="jam_out_err">리더는 방을 나갈수 없어요^^</string>
    <string name="jam_remove_title">잼 폐쇄하기</string>
    <string name="jam_remove_desc">잼을 폐쇄하시겠습니까?</string>
    <string name="jam_remove_room">폐쇄된 잼 입니다.\n약관 위반 또는 방장에 의해 폐쇄 되었습니다.\n새로고침후 목록에서 제거 됩니다.</string>
    <string name="jam_remove_room_ok">폐쇄된 잼 입니다.\n약관 위반 또는 방장에 의해 폐쇄 되었습니다.\n목록에서 제거 하시겠습니까?</string>
    <string name="jam_create_hint">음란성,폭력성 등 약관에 위반되는 내용을 포함하는 경우 동의 없이 폐쇄 됩니다.\n#태그 기능으로 검색어를 입력하세요.\nex)안녕 모두 #모여라 모두 #친구 하자.</string>
    <string name="chat_remove_desc">해당 채팅을 제거 하시겠습니까?</string>
    <string name="jam_report_title">잼 신고</string>
    <string name="jam_report_desc">잼을 신고하시겠습니까?</string>
    <string name="jam_promotion_title">잼 홍보</string>
    <string name="jam_promotion_desc">잼을 홍보하시겠습니까?</string>
    <string name="jam_promotion_err" formatted="false">%s초 뒤에 시도 할수 있습니다.</string>
    <string name="create_title">잼 제목</string>
    <string name="create_text">잼 소개</string>
    <string name="create_cate">카테고리 선택</string>
    <string name="create_lock">가입승인 켜짐</string>
    <string name="create_lock_desc">가입승인을 통해서 맴버를 받을 수 있어요.</string>
    <string name="create_open">가입승인 꺼짐</string>
    <string name="create_open_desc">가입승인 없이 즉시 맴버를 받을 수 있어요.</string>
    <string name="create_image">잼 이미지 선택</string>
    <string name="create_loading">생성 하는 중..</string>
    <string name="create_image_list_add">새로운 이미지 등록</string>
    <string name="create_tag_size">태그는 3개 까지 적용 할수 있습니다</string>
    <string name="create_tag_leng">태그는 최대 10자 까지 적용 할수 있습니다</string>
    <string name="create_uc01">이전채팅보기 허용</string>
    <string name="create_uc02">이전채팅보기 차단</string>
    <string name="create_uc_desc01">모든 채팅 내역을 볼수 있습니다.</string>
    <string name="create_uc_desc02">가입시점부터 채팅 내역을 볼수 있습니다.</string>
    <string name="ready_count" formatted="false">승인 대기 (%s)</string>
    <string name="member_count" formatted="false">MEMBER (%s)</string>
    <string name="member_ban">강퇴하기</string>
    <string name="member_master">방장변경</string>
    <string name="member_joinok">가입 승인</string>
    <string name="member_remove">승인하지 않고 대기열에서 삭제</string>
    <string name="member_ban_msg01" formatted="false">%s님을 강퇴합니다. 강퇴하면 다시 들어올 수 없습니다</string>
    <string name="member_ban_msg02" formatted="false">%s님을 잼에서 강퇴했습니다. 이 잼에 다시 들어올수 없습니다</string>
    <string name="member_master_msg01" formatted="false">%s님에게 방장권한을 넘기겠습니까?</string>
    <string name="member_master_msg02" formatted="false">%s님에게 방장권한을 넘겼습니다.</string>
    <string name="btn_send">전송</string>
    <string name="btn_search">검색</string>
    <string name="err_nolist">개설된 잼이 없습니다.</string>
    <string name="err_nolist2">목록이 없습니다.</string>
    <string name="err_adult_img">이미지가 너무 야해요..ㅠ</string>
    <string name="err_room_info">정보를 불러오는데 실패하였습니다. 잠시후 다시 시도해 주세요.</string>
    <string name="row_title_guaid" formatted="false">%s님의 %s 잼.</string>
    <string name="profile_popup_chat_image_downok">다운로드 완료</string>
    <string name="profile_popup_chat_image_downfail">다운로드 실패</string>
    <string name="setting_removeaudio">업로드 메시지 모두 제거</string>
    <string name="setting_push">알림 설정</string>
    <string name="setting_removeaudio_msg">업로드했던 오디오,이미지 메시지를 모두 제거 합니다.</string>
    <string name="setting_version" formatted="false">잼 버전 %s</string>
    <string name="setting_agree01">이용약관</string>
    <string name="setting_agree02">개인정보취급방침</string>
    <string name="setting_agree03">잼 운영 및 제재 규정</string>
    <string name="setting_agree04">오픈 라이선스</string>
    <string name="permission_account">구글드라이브에 이미지를 업로드 하기위해 로그인 작업이 필요합니다.</string>
    <string name="permission_file_err">접근 권한이 필요 합니다.</string>
    <string name="permission_all_err">앱정보 -> 권한 메뉴에서 모든 권한을 체크해주셔야 합니다</string>
    <string name="drive_login">구글드라이브 로그인이 필요합니다.</string>
    <string name="story_join">스토리</string>
    <string name="story_write">등록</string>
    <string name="story_comment">댓글</string>
    <string name="story_remove">삭제</string>
    <string name="story_remove_desc">삭제 하시겠습니까?</string>
    <string name="story_modify">수정</string>
    <string name="push_noti">새로운 대화가 있습니다.</string>
    <string name="push_join_ok">대기중인 잼에 가입 승인 되었습니다.</string>
    <string name="push_join_signup">새로운 가입 신청이 있습니다.</string>
    <string name="push_story">새로운 스토리가 있습니다.</string>
    <string name="push_story_comment">스토리에 새로운 댓글이 있습니다.</string>
    <string name="audio_err">만료된 메시지 입니다.</string>
    <string name="notice">Notice</string>
    <string name="block_user_msg">서비스 정지된 유저 입니다.</string>
    <string name="block_jam_msg">사용자의 신고로 정지된 잼 입니다.</string>
    <string name="block_version">새로운 업데이트가 있습니다.</string>
    <string name="logout_msg">기존에 보관된 채팅 정보가 모두 사라집니다.</string>
    <string name="logout_title">로그아웃 하시겠습니까?</string>
    <string name="app_exit">뒤로가기를 한번 더 누르면 종료 합니다</string>
    <string name="block_text_err" formatted="false">금칙어(%s)가 포함되어 있습니다</string>
</resources>