<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/appbar"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	>
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/toolbar_height"
		app:contentInsetLeft="0dp"
		app:contentInsetRight="0dp"
		app:contentInsetStart="0dp"
		app:contentInsetEnd="0dp"
		app:layout_scrollFlags="scroll|enterAlways"
		app:layout_collapseMode="pin"
		android:background="@color/white"
		>
		<!--app:layout_collapseMode="parallax"-->
		<!--app:layout_scrollFlags="scroll"-->
		<!--app:contentInsetLeft="0dp"-->
		<!--app:contentInsetRight="0dp"-->
		<!--app:contentInsetStart="0dp"-->
		<!--app:contentInsetEnd="0dp"-->
		<!--app:layout_collapseMode="pin"-->



		<FrameLayout
			android:id="@+id/lay_title"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			>

			<FrameLayout
				android:id="@+id/btn_left_menu"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/toolbar_height"
				android:layout_gravity="center|left"
				>
				<ImageView
					android:id="@+id/iv_left_menu"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:src="@drawable/icon_jam"
					android:layout_gravity="center|left"
					/>
			</FrameLayout>


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/toolbar_height"
				android:orientation="horizontal"
				android:gravity="center|right"
				>
				<TextView
					android:id="@+id/btn_list"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/pink"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:text="@string/menu_list"
					/>
				<TextView
					android:id="@+id/btn_my"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/btn_back"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:text="@string/menu_me"
					/>
				<TextView
					android:id="@+id/btn_create"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/btn_back"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:text="@string/menu_create"
					/>
				<TextView
					android:id="@+id/btn_setting"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/btn_back"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="16dp"
					android:text="@string/menu_setting"
					/>
			</LinearLayout>


		</FrameLayout>

	</android.support.v7.widget.Toolbar>


	<LinearLayout
		android:id="@+id/header_contents"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_collapseMode="parallax"
		android:gravity="center|bottom"
		android:background="@color/white"
		>

		<FrameLayout
			android:id="@+id/lay_topad"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"></FrameLayout>
		<FrameLayout
			android:id="@+id/lay_instream"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/btn_back"
			android:visibility="gone"
			>

			<SurfaceView
				android:id="@+id/surface"
				android:layout_width="match_parent"
				android:layout_height="1px"
				android:layout_gravity="center"
				/>


			<FrameLayout
				android:id="@+id/btn_instream"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center"
				android:visibility="gone"
				>
				<ImageView
					android:id="@+id/iv_instream"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:minHeight="10dp"
					android:scaleType="centerCrop"
					/>
				<ImageView
					android:id="@+id/btn_streamplay"
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:src="@drawable/btn_play"
					android:layout_gravity="center"
					/>

			</FrameLayout>


		</FrameLayout>
	</LinearLayout>


</android.support.design.widget.AppBarLayout>

