<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <!--<LinearLayout-->
            <!--android:id="@+id/layout_back"-->
            <!--android:layout_width="@dimen/toolbar_height"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center">-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/icon_popup_back"/>-->
        <!--</LinearLayout>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_feed_all"
                android:layout_width="64dp"
                android:layout_height="26dp"
                android:gravity="center"
                android:background="@drawable/feed_write_select_bg"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/feed_all"/>
            <TextView
                android:id="@+id/tv_feed_fam"
                android:layout_width="64dp"
                android:layout_height="26dp"
                android:layout_marginLeft="-0.5dp"
                android:gravity="center"
                android:background="@drawable/feed_write_unselect_bg2"
                android:textColor="@color/pink"
                android:textSize="12sp"
                android:text="@string/feed_fam_only"/>
            <TextView
                android:id="@+id/tv_feed_write"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:gravity="center"
                android:background="@drawable/feed_write_regist_bg"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:text="@string/story_write"/>
        </LinearLayout>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fragment_background"
                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/pictures"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    />


                <ImageView
                    android:id="@+id/iv_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    />


            </FrameLayout>

            <EditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="12sp"
                android:textColor="#555555"
                android:textColorHint="#b5b5b5"
                android:gravity="center|top"
                android:hint="@string/feed_text_hint"
                android:background="@null"
                android:maxLength="150"
                />



            <!--style="@style/TextViewCustomFont"-->
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ececec"/>

    </LinearLayout>
</LinearLayout>